--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,12 +66,16 @@ header h1 {
 }
 
 .weather-now {
-  margin: 10px;
-  padding: 10px;
+  margin: 0px 10px 5px 5px;
+  padding: 0px 10px 5px 5px;
   border: 2px solid;
   border-radius: 5px;
   min-width: 200px;
   max-height: 200px;
+}
+
+#currentDay {
+  margin-top: 0px;
 }
 
 .weather-now ul {
@@ -105,8 +109,8 @@ header h1 {
   padding: 10px;
   border: 2px solid;
   border-radius: 5px;
-  height: 160px;
-  width: 120px;
+  height: 200px;
+  width: 160px;
   justify-content: flex-start;
   color: white;
   background-color: rgb(26, 26, 66);
